--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,113 @@
 $primary-color: #444;
+$secondary-color: #eece1a;
+$show-home-image: true;
+// Remember this is the relative path of dist/css/main.css. not scss/main.scss.
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
+
+@mixin easeOut {
+  transition: all 0.5s ease-out;
+}
+
+@mixin background {
+  @if ($show-home-image) {
+    &#bg-img {
+      background: $home-image;
+      // A background-image that will not scroll with the page (fixed):
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  }
+}
+
+//html {
+//  font-size: 10px;
+//}
+
+* {
+  box-sizing: border-box;
+}
 
 body {
+  @include background;
   background: $primary-color;
   color: #fff;
+  height: 100%;
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
 }
+
+// Headings
+h1,h2,h3 {
+  margin: 0;
+  font-weight: 400;
+  &.lg-heading {
+    // rem go against the html font size setting, while em only goes against parents element.
+    font-size: 6rem;
+  }
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+  .icons {
+    margin-top: 1rem;
+    a {
+      padding: 0.4rem;
+      &:hover {
+        color: $secondary-color;
+        @include easeOut;
+      }
+    }
+  }
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
