Extract all the variables into _config.scss file

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,4 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
-$show-home-image: true;
-// Remember this is the relative path of dist/css/main.css. not scss/main.scss.
-$home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+@import "config";
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
