--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -13,4 +13,26 @@
     background: #fff;
     @include easeOut;
   }
+  // Rotate Into X With Menu Lines
+  &.close {
+    transform: rotate(180deg);
+    .btn-line {
+      // Line 1 - Rotate
+      &:nth-child(1) {
+        // https://developer.mozilla.org/en-US/docs/Web/CSS/transform
+        // https://www.w3schools.com/css/css3_2dtransforms.asp
+        // Translate: reposition it. rotate: turns it.
+        transform: rotate(45deg) translate(5px, 5px);
+      }
+      // Line 2 - Hide
+      &:nth-child(2) {
+        opacity: 0;
+      }
+      // Line 3 - Rotate
+      &:nth-child(3) {
+        // You will have to manually play around the px figures in devtool to make it look like a cross
+        transform: rotate(-45deg) translate(7px, -6px);
+      }
+    }
+  }
 }
