--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -81,5 +81,12 @@
       // Slide in from the bottom
       transform: translate3d(0, 0, 0);
     }
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url('../img/portrait.jpg');
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
   }
 }
