--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -89,4 +89,21 @@
       border: solid 3px $secondary-color;
     }
   }
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+    &.show {
+      // Slide in from right
+      transform: translate3d(0, 0, 0);
+    }
+  }
+}
+
+// Delay each nav item slide by 0.1s.
+// Otherwise, it will slide in horizontally at the same time as the .menu-nav
+// Which makes the things looks slide diagonally
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
+  }
 }
