--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -49,7 +49,7 @@ $background-opacity: 0.9;
     @content
   }
 }
-@mixin mediaXL {
+@mixin mediaXl {
   @media screen and (min-width: 1171px) {
     @content
   }
