--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -18,6 +18,31 @@
       margin-bottom: 1rem;
     }
   }
+  ul.menu-nav,
+  div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0;
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  .menu-nav {
+    height: 75vh;
+    // Slide in from right
+    transform: translate3d(-100%, 0, 0);
+    font-size: 24px;
+  }
+  .menu-branding {
+    height: 25vh;
+    // Slide in from left
+    transform: translate3d(100%, 0, 0);
+    .portrait {
+      background: url("../img/portrait_small.jpg");
+      width: 150px;
+      height: 150px;
+    }
+  }
 }
 
 // Smartphones
