--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,7 @@
 // Notice the partical does not generate the css file?
 
-$primary-color: #444;
+//$primary-color: #444;
+$primary-color: #fff;
 $secondary-color: #eece1a;
 $show-home-image: true;
 // Remember this is the relative path of dist/css/main.css. not scss/main.scss.
@@ -30,6 +31,15 @@ $background-opacity: 0.9;
         background: rgba($primary-color, $background-opacity);
       }
     }
+  }
+}
+
+// Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
   }
 }
 
