--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -10,7 +10,7 @@
     width: 28px;
     height: 3px;
     margin-bottom: 5px;
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
   // Rotate Into X With Menu Lines
@@ -107,7 +107,7 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
     &:hover {
