--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 // Notice the partical does not generate the css file?
 
-//$primary-color: #444;
-$primary-color: #fff;
+$primary-color: #444;
+//$primary-color: #fff;
 $secondary-color: #eece1a;
 $show-home-image: true;
 // Remember this is the relative path of dist/css/main.css. not scss/main.scss.
