--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,7 +52,8 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  //height: 100%;
+  height: calc(100vh - 60px);
   .icons {
     margin-top: 1rem;
     a {
