--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,7 +53,7 @@ header {
 main {
   padding: 4rem;
   //height: 100%;
-  height: calc(100vh - 60px);
+  min-height: calc(100vh - 60px);
   .icons {
     margin-top: 1rem;
     a {
